# HSE-PL

./: .gitignore
Homeworks/1 Year/Home-01/src/: 0017.c  0018.c  0019.c  0020.c  0021.c  0022.c  0023-001.c  0023-002.c  0023-003.c  0023-004.c  0024.c  0025-001.c  0025-002.c  0026.c  0027.c  0040.c  0041.c  0042.c  0043.c  0044.c  0045.c  0046.c  0047-001.c  0047-002.c  0048.c  0049.c  0050.c  0065.c  0066.c  0067-001.c  0067-002.c  0067-003.c  0067-004.c  0067-005.c  0068-001.c  0068-002.c  0068-003.c  0069.c  0070-001.c  0070-002.c  (+20 more)
Homeworks/1 Year/Home-03/src/: matrix.cpp  matrix.h
Homeworks/1 Year/Home-04/src/: matrix.cpp  matrix.h
Homeworks/1 Year/Home-05/: CMakeLists.txt  README.md
Homeworks/1 Year/Home-05/src/: CMakeLists.txt  RLE.hpp  main.cpp
Homeworks/1 Year/Home-05/tests/: CMakeLists.txt  main.cpp
Homeworks/1 Year/Home-06/: CMakeLists.txt  README.md
Homeworks/1 Year/Home-06/src/: CMakeLists.txt  Chat.hpp  UDPSocket.hpp  main.cpp
Homeworks/1 Year/Home-06/tests/: CMakeLists.txt  main.cpp
Homeworks/1 Year/Home-07/: README.md
Homeworks/1 Year/Home-07/src/: FTPClient.hpp  TCPSocket.hpp  main.cpp
Homeworks/1 Year/Home-08/: README.md
Homeworks/2 Year/Home-21/: README.md
Homeworks/2 Year/Home-22/: README.md
Labs/1 Year/Lab-01/: README.md
Labs/1 Year/Lab-01/src/: main.c
Labs/1 Year/Lab-02/: README.md
Labs/1 Year/Lab-02/src/: main.c
Labs/1 Year/Lab-03/: README.md
Labs/1 Year/Lab-03/src/: main.c
Labs/1 Year/Lab-04/: README.md
Labs/1 Year/Lab-04/src/: Makefile  main.c  table.c  table.h
Labs/1 Year/Lab-05/: README.md
Labs/1 Year/Lab-05/src/: bigint.cpp  bigint.h  main.cpp
Labs/1 Year/Lab-06/: README.md
Labs/1 Year/Lab-06/src/: bigint.cpp  bigint.h  main.cpp
Labs/1 Year/Lab-07/: README.md
Labs/1 Year/Lab-07/src/: fraction.cpp  main.cpp
Labs/1 Year/Lab-08/: Makefile  README.md
Labs/1 Year/Lab-08/src/: BigFraction.cpp  BigFraction.h  bigint.cpp  bigint.h  fraction.cpp  fraction.h  main.cpp
Labs/1 Year/Lab-09/: README.md
Labs/1 Year/Lab-09/src/: fraction.hpp  main.cpp
Labs/1 Year/Lab-10/: README.md
Labs/1 Year/Lab-10/src/: main.cpp  matrix.hpp
Labs/1 Year/Lab-11/: README.md
Labs/1 Year/Lab-11/src/: main.cpp  stack.hpp
Labs/1 Year/Lab-12/: README.md
Labs/1 Year/Lab-12/src/: crc32.hpp  main.cpp  map.hpp  vector.hpp
Labs/1 Year/Lab-13/: README.md
Labs/1 Year/Lab-13/src/: main.cpp  merge_sort.hpp
Labs/1 Year/Lab-14/: CMakeLists.txt  README.md
Labs/1 Year/Lab-14/include/: checksum.hpp  functools.hpp
Labs/1 Year/Lab-14/src/: checksum.cpp  functools.cpp  main.cpp
Labs/1 Year/Lab-15/: CMakeLists.txt  README.md
Labs/1 Year/Lab-15/include/: checksum.hpp  functools.hpp  thread_pool.hpp
Labs/1 Year/Lab-15/src/: checksum.cpp  functools.cpp  main.cpp
Labs/1 Year/Lab-16/: CMakeLists.txt
Labs/1 Year/Lab-16/include/: coro.hpp  http_handler.hpp  server.hpp  ssocket.hpp
Labs/1 Year/Lab-16/pages/: 404.html  index.html
Labs/1 Year/Lab-16/src/: http_handler.cpp  main.cpp  server.cpp  ssocket.cpp
Labs/2 Year/Lab-22/: CMakeLists.txt  README.md
Labs/2 Year/Lab-22/src/: MainWindow.cpp  MainWindow.h  main.cpp  output.puml
Labs/2 Year/Lab-23/: CMakeLists.txt  README.md
Labs/2 Year/Lab-23/report/: output.puml  output.tex
Labs/2 Year/Lab-23/src/: MainWindow.cpp  MainWindow.h
Labs/2 Year/Lab-24/: build.pro
Labs/2 Year/Lab-24/src/: ImageViewer.cpp  ImageViewer.h  MainWindow.cpp  MainWindow.h  Server.cpp  Server.h  main.cpp
Labs/2 Year/Lab-25/: .qmake.stash  Lab-25.pro
Labs/2 Year/Lab-25/src/: MainWindow.cpp  MainWindow.h  main.cpp
Labs/2 Year/Lab-26/: AudioPlayer.pro  Makefile  README.md
Labs/2 Year/Lab-26/src/: MainWindow.cpp  MainWindow.h  main.cpp
Labs/2 Year/Lab-78/: README.md  build.pro
Labs/2 Year/Lab-78/src/: MainWindow.cpp  MainWindow.h  SettingsMenu.cpp  SettingsMenu.h  main.cpp
Works/1 Year/Work-01/: main  main.c
Works/1 Year/Work-02/: README.md
Works/1 Year/Work-02/src/: main.c
Works/2 Year/Work-20/: README.md
Works/2 Year/Work-20/src/: key_generator.cpp  key_generator.h  main.cpp
Works/2 Year/Work-21/: CMakeLists.txt
Works/2 Year/Work-21/include/: keygen.h
Works/2 Year/Work-21/src/: keygen.cpp  main.cpp
Works/2 Year/Work-22/: CMakeLists.txt
Works/2 Year/Work-22/include/: mainwindow.hpp  openssl_tools.hpp
Works/2 Year/Work-22/src/: main.cpp  mainwindow.cpp  openssl_tools.cpp
